// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-input has-error"
  >
    <label
      class="aje-label"
      for="TextInput-3892280160776712"
    >
      Text Label
    </label>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <input
      aria-describedby="TextInput-2911453357077744"
      id="TextInput-3892280160776712"
      placeholder="placeholder"
      type="text"
      value="content"
    />
    <p
      class="aje-label--error"
      id="TextInput-2911453357077744"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-input--floating has-error"
  >
    <div
      class="aje-input__container"
    >
      <input
        aria-describedby="TextInput-2911453357077744"
        id="TextInput-3892280160776712"
        placeholder="placeholder"
        type="text"
        value="content"
      />
      <label
        class=""
        for="TextInput-3892280160776712"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="aje-label--error"
      id="TextInput-2911453357077744"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
